1.6
 * Bug Fixes:
   * IOError rather than NameError is raised when File succeeds in
     typefinding but fails in stream parsing.
   * errors= kwarg is correctly interpreted for FLAC tags now.

 * New Features:
   * Vorbis comment vendors include the Mutagen version.
   * mutagen.oggspeex: Read/tag Ogg Speex files.

1.5.1 - 2006.06.26
 * Bug Fixes:
   * Handle ENODEV from mmap (e.g. on fuse+sshfs).
   * Reduce test rerun time.

1.5 - 2006.06.20
 * Bug Fixes:
   * APEv2
      * Invalid Lyrics3v2 tags are ignored/overwritten.
      * Binary values are autodetected as documented.
   * OggVorbis, OggFLAC:
      * Write when the setup packet spans multiple pages.
      * Zero granule position for header packets.

 * New Features:
   * mutagen.oggtheora: Read/tag Ogg Theora files.
   * Test Ogg formats with ogginfo, if present.

1.4 - 2006.06.03
 * Bug Fixes:
   * EasyID3: Fix tag["key"] = "string" handler. (#693)
   * APEv2:
     * Skip Lyrics3v2 tags. (Miguel Angel Alvarez)
     * Avoid infinite loop on malformed tags at the start of the file.
   * Proper ANSI semantics for file positioning. (#707)

 * New Features:
   * VComment: Handle malformed Vorbis comments when errors='ignore' or 
     errors='replace' is passed to VComment#load.
     (Bastian Kleineidam, #696)
   * Test running is now controlled through setup.py (./setup.py test).
   * Test coverage data can be generated (./setup.py coverage).
   * Considerably more test coverage.

1.3 - 2006.05.29
 * New Features:
   * mutagen.File: Automatic file type detection.
   * mutagen.ogg: Generic Ogg stream parsing. (#612)
   * mutagen.oggflac: Read/tag Ogg FLAC files.
   * mutagen.oggvorbis no longer depends on pyvorbis.
   * ID3: SYLT support. (#672)

1.2 - 2006.04.23
 * Bug Fixes:
   * MP3: Load files with zeroed Xing headers. (#626)
   * ID3: Upgrade ID3v2.2 PIC tags to ID3v2.4 APIC tags properly.
   * Tests exit with non-zero status if any have failed.